fix align-items
Former-commit-id: d12670869231b665c9980640e5f1a958b820b67b

--- a/frontend/src/components/Statics.module.css
+++ b/frontend/src/components/Statics.module.css
@@ -1,5 +1,5 @@
 .bg {
-  width: 200px;
+  width: 400px;
 
   align-items: center;
   justify-content: center;
@@ -7,10 +7,11 @@
 }
 .wrapper {
   width: 400px;
-
+  display: flex;
+  flex-direction: column;
   text-align: center;
-  justify-content: space-between;
-  align-items: center;
+  justify-content: space-evenly;
+  align-items: bottom;
 }
 .stats {
   display: flex;
